oauth/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth
  namespace: general-services
  labels:
    app: oauth
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  strategy:
    type: Recreate      
  template:
    metadata:
      labels:
        app: oauth
    spec:
      terminationGracePeriodSeconds: 60    
      containers:
        - image: thomseddon/traefik-forward-auth:2
          imagePullPolicy: Always
          name: oauth
          ports:
            - containerPort: 4181
              hostPort: 4181
              protocol: TCP      
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
            requests:
              cpu: 250m
              memory: "134217728"
          volumeMounts:
            -  name: oauth-longhorn-volume
               mountPath: /config
      volumes:
        - name: oauth-longhorn-volume
          persistentVolumeClaim:
            claimName: oauth-longhorn-pvc
      hostname: oauth
